# switchzzk

./: .gitignore  .gitmodules  AGENTS.MD  CMakeLists.txt  Makefile  Makefile.switch  README.md  build.sh
docs/: architecture.md  handoff.md  playback.md  roadmap.md  toolchain.md
fixtures/: live_detail.json  live_list.json  live_master.m3u8
include/activity/: main_activity.hpp
include/chzzk/: chat_client.hpp  chzzk_client.hpp  http_client.hpp  image_loader.hpp  m3u8.hpp  models.hpp  recent_channels.hpp  switch_player.hpp
include/tab/: category_tab.hpp  following_tab.hpp  live_tab.hpp  search_tab.hpp  vod_tab.hpp
resources/i18n/en-US/: strings.json
resources/i18n/ko/: strings.json
resources/xml/activity/: main.xml
resources/xml/tabs/: category.xml  following.xml  live.xml  search.xml  vod.xml
resources/xml/views/: category_cell.xml  live_card.xml  live_cell.xml  live_grid_row.xml  search_cell.xml  vod_card.xml  vod_cell.xml
scripts/: fetch_vendor_headers.sh
scripts/switch/: build_custom_portlibs.sh
src/borealis/: main.cpp
src/borealis/activity/: main_activity.cpp
src/borealis/tab/: category_tab.cpp  following_tab.cpp  live_tab.cpp  search_tab.cpp  vod_tab.cpp
src/common/: chat_client.cpp  chzzk_client.cpp  https_http_client.cpp  image_loader.cpp  m3u8.cpp
src/host/: main.cpp
src/switch/: main.cpp  switch_player.cpp
